--- a/src/App.css
+++ b/src/App.css
@@ -43,25 +43,15 @@ body {
   width: 60px;
 }
 
-.hin {
-  display: inline-block;
-  width: 360px;
+#now {
+  font-size: 2em;
 }
-
-table.hinmoku {
-  margin-top: 0px;
+#time-list {
+  height: 40vh;
+  overflow-y: scroll;
 }
-
-#input-shop-name {
-  width: 300px;
-}
-#table-area {
-  margin-top: 70px;
-}
-.label-s {
-  color: #f99;
-  font-size: 0.8em;
-}
-#clear-all-hinmoku-btn {
-  margin-top: 120px;
+#btn-record {
+  font-size: 3em;
+  width: 100%;
+  height: 30vh;
 }
