--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,8 @@ body {
 .num {
   width: 60px;
 }
-
-#now {
-  font-size: 2em;
+#title {
+  font-size: 4vmin;
 }
 #time-list {
   height: 40vh;
@@ -53,5 +52,5 @@ body {
 #btn-record {
   font-size: 3em;
   width: 100%;
-  height: 30vh;
+  height: 20vh;
 }
