--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   
   /* Set neon color */
   --neon-text-color: #f40;
-  --neon-border-color: #08f;
+  --neon-text-color2: rgb(244, 44, 44);
+  /* --neon-border-color: #08f; */
+  --neon-border-color: rgb(211, 106, 79);
 }
 
 .App-logo {
@@ -70,44 +72,40 @@ body {
   padding: 0 1rem;
   /* border: 0.4rem solid #fff; */
   border-radius: 2rem;
-  /* text-transform: uppercase; */
-  /* animation: flicker 1.5s infinite alternate;      */
-
-
-        text-shadow:
-            -0.2rem -0.2rem 1rem #fff,
-            0.2rem 0.2rem 1rem #fff,
-            0 0 2rem var(--neon-text-color),
-            0 0 4rem var(--neon-text-color),
-            0 0 6rem var(--neon-text-color),
-            0 0 8rem var(--neon-text-color),
-            0 0 10rem var(--neon-text-color);
-
+  text-shadow:
+      -0.2rem -0.2rem 1rem #fff,
+      0.2rem 0.2rem 1rem #fff,
+      0 0 2rem var(--neon-text-color),
+      0 0 4rem var(--neon-text-color),
+      0 0 6rem var(--neon-text-color),
+      0 0 8rem var(--neon-text-color),
+      0 0 10rem var(--neon-text-color);
 }
-
+#title-xxx {
+  padding: 0.4rem;
+  animation: flicker 3.5s infinite alternate;     
+}
 @keyframes flicker {
-    
     0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-      
         text-shadow:
-            -0.2rem -0.2rem 1rem #fff,
-            0.2rem 0.2rem 1rem #fff,
-            0 0 2rem var(--neon-text-color),
-            0 0 4rem var(--neon-text-color),
-            0 0 6rem var(--neon-text-color),
-            0 0 8rem var(--neon-text-color),
-            0 0 10rem var(--neon-text-color);
-        
-        /* box-shadow:
+            -0.2rem -0.2rem 1rem #ffffff,
+            0.2rem 0.2rem 1rem #ffffff,
+            0 0 2rem var(--neon-text-color2),
+            0 0 4rem var(--neon-text-color2),
+            0 0 6rem var(--neon-text-color2),
+            0 0 8rem var(--neon-text-color2),
+            0 0 10rem var(--neon-text-color2);
+        box-shadow:
             0 0 .5rem #fff,
             inset 0 0 .5rem #fff,
             0 0 2rem var(--neon-border-color),
             inset 0 0 2rem var(--neon-border-color),
             0 0 4rem var(--neon-border-color),
-            inset 0 0 4rem var(--neon-border-color);         */
+            inset 0 0 4rem var(--neon-border-color);        
     }
     
-    20%, 24%, 55% {        
+    /*  20%, 24%, 55%*/
+    20%  {        
         text-shadow: none;
         box-shadow: none;
     }    
